# fraud-detection

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: main.py
data/: generate_data.py  sample.csv  transactions.csv
lambda/: handler.py
mlruns/1/models/m-006769a97f52452fbf60918d081875b9/artifacts/: MLmodel
mlruns/1/models/m-06a3ce197f4341d987ed8fece82400fc/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-12bd0412125a4610b9483b50d708b9df/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-1f5eebdd79a04488b6f8f27d3d6c5bf8/artifacts/: MLmodel
mlruns/1/models/m-1f6fc5d3425d4c15be407bad704ba71e/artifacts/: MLmodel
mlruns/1/models/m-2838dfc67473444b8492959a54dcb0a4/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-2afb67cbf8f4421ea5297ea40226934f/artifacts/: MLmodel
mlruns/1/models/m-35e886434767483e83002147c092d88b/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-363be519eca8447896b35046a3aa333e/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-3b9c32942c7b47a699bf8c5e04485698/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-4020210612d34feb84e50c2f288fd65a/artifacts/: MLmodel  model.pkl  requirements.txt
mlruns/1/models/m-53efe6ed5eef4f69aa1f3719c22e73bb/artifacts/: MLmodel  (+1 more)
monitoring/: monitor.py
notebooks/: eda.ipynb  unsupervised.ipynb
orchestration/: flow.py
scripts/: sync_mlflow.sh
src/: eda.py  train.py  unsupervised.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
tests/: test_app.py  test_integration.py  test_train.py
(+58 files in other folders)
